--- a/Dockerfile.postgres
+++ b/Dockerfile.postgres
@@ -11,4 +11,4 @@ EXPOSE 5432
 
 # docker network create devops-rede
 # docker build -f Dockerfile.postgres -t danielucb/devops-postres-volume:v1.0 .
-# docker run -dti --name devops-postgres-volume --network devops-rede -p 5432:5432 -v devops-kubenews_vol-postres:/var/lib/postgresql/data danielucb/devops-postres-volume:v1.0 /bin/bash
+# docker run -dti --name devops-postgres-volume --network devops-rede -p 5432:5432 -v devops-kubenews_vol-postres:/var/lib/postgresql/data danielucb/devops-postres-volume:v1.0
